--- a/src/bundle/Resources/views/fields/content_fields.html.twig
+++ b/src/bundle/Resources/views/fields/content_fields.html.twig
@@ -4,7 +4,7 @@
 
 {% block ezobjectrelationlist_field %}
     {% apply spaceless %}
-        {% if not ez_field_is_empty( content, field ) %}
+        {% if not ibexa_field_is_empty( content, field ) %}
             <ul {{ block( 'field_attributes' ) }}>
                 {% for contentId in field.value.destinationContentIds %}
                     {% if parameters.available[contentId] %}
@@ -21,7 +21,7 @@
 
 {% block ezimageasset_field %}
     {% apply spaceless %}
-        {% if not ez_field_is_empty(content, field) and parameters.available %}
+        {% if not ibexa_field_is_empty(content, field) and parameters.available %}
             {{ ez_http_tag_relation_ids(field.value.destinationContentId) }}
             <div {{ block('field_attributes') }}>
                 {{ render(controller('ez_content:embedAction', {
@@ -39,7 +39,7 @@
 
 {% block ezobjectrelation_field %}
     {% apply spaceless %}
-        {% if not ez_field_is_empty( content, field ) and parameters.available %}
+        {% if not ibexa_field_is_empty( content, field ) and parameters.available %}
             {{ ez_http_tag_relation_ids(field.value.destinationContentId) }}
             <div {{ block( 'field_attributes' ) }}>
                 {{ render( controller( "ez_content:viewAction", {'contentId': field.value.destinationContentId, 'viewType': 'text_linked', 'layout': false} ) ) }}
