--- a/src/bundle/Resources/views/fields/content_fields.html.twig
+++ b/src/bundle/Resources/views/fields/content_fields.html.twig
@@ -10,7 +10,7 @@
                     {% if parameters.available[contentId] %}
                         {{ ibexa_http_cache_tag_relation_ids(contentId) }}
                         <li>
-                            {{ render( controller( "ez_content:viewAction", {'contentId': contentId, 'viewType': 'embed', 'layout': false} ) ) }}
+                            {{ render( controller( "ibexa_content:viewAction", {'contentId': contentId, 'viewType': 'embed', 'layout': false} ) ) }}
                         </li>
                     {% endif %}
                 {% endfor %}
@@ -24,7 +24,7 @@
         {% if not ibexa_field_is_empty(content, field) and parameters.available %}
             {{ ibexa_http_cache_tag_relation_ids(field.value.destinationContentId) }}
             <div {{ block('field_attributes') }}>
-                {{ render(controller('ez_content:embedAction', {
+                {{ render(controller('ibexa_content:embedAction', {
                     contentId: field.value.destinationContentId,
                     viewType: 'asset_image',
                     no_layout: true,
@@ -42,7 +42,7 @@
         {% if not ibexa_field_is_empty( content, field ) and parameters.available %}
             {{ ibexa_http_cache_tag_relation_ids(field.value.destinationContentId) }}
             <div {{ block( 'field_attributes' ) }}>
-                {{ render( controller( "ez_content:viewAction", {'contentId': field.value.destinationContentId, 'viewType': 'text_linked', 'layout': false} ) ) }}
+                {{ render( controller( "ibexa_content:viewAction", {'contentId': field.value.destinationContentId, 'viewType': 'text_linked', 'layout': false} ) ) }}
             </div>
         {% endif %}
     {% endapply %}
