--- a/src/bundle/Resources/views/fields/content_fields.html.twig
+++ b/src/bundle/Resources/views/fields/content_fields.html.twig
@@ -1,4 +1,4 @@
-{% trans_default_domain "content_fields" %}
+{% trans_default_domain 'ibexa_fields_groups' %}
 
 {% extends "@IbexaCore/content_fields.html.twig" %}
 
